# tipofmytongue

./: .env  .gitignore  docker-compose.yml  readme.md
api/: .gitignore  Dockerfile  build_cache.py  build_cache2.py  build_embeddings.py  build_pca_embeddings.py  main.py  pyproject.toml  query_words.py  readme.md  visualize_embeddings.py
api/.devcontainer/: devcontainer.json
api/app/: download_embeddings.py  embedding_utils.py  env_utils.py  milvus_utils.py  query_utils.py  transform_utils.py  triton_utils.py
api/src/: build_cache.py  query_words.py
milvus/: docker-compose.yml  hello_milvus.py
triton/: Dockerfile  readme.md
triton/all-MiniLM-L6-v2/: config.pbtxt
triton/all-MiniLM-L6-v2/all-MiniLM-L6-v2/: config.pbtxt
triton/all-MiniLM-L6-v2/postprocess/: config.pbtxt
triton/all-MiniLM-L6-v2/postprocess/warmup/: token_embeddings
triton/all-MiniLM-L6-v2/tokenizer/: config.pbtxt
triton/all-MiniLM-L6-v2/transformer/: config.pbtxt
triton/all-MiniLM-L6-v2/warmup/: input_ids
triton/gte-large/: config.pbtxt
triton/gte-large/gte-large/: config.pbtxt
triton/gte-large/postprocess/warmup/: token_embeddings
triton/gte-large/tokenizer/: config.pbtxt
triton/gte-large/transformer/: config.pbtxt
triton/postprocess/: config.pbtxt
triton/postprocess/1/: model.py
triton/postprocess/warmup/: last_hidden_state
triton/tokenizer/: config.pbtxt
triton/tokenizer/1/: model.py
triton/tokenizer/warmup/: input_text
triton/transformer/: config.pbtxt
webapp/: Dockerfile  README.md  makefile  package-lock.json  package.json
webapp/nginx/: default.conf.template
webapp/public/: index.html
webapp/src/: App.tsx  Home.module.css
webapp/src/data/: background_vectors.json
