[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9.0"
openai = {extras = ["datalib"], version = "^0.28.0"}
numpy = "^1.25.2"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
mangum = "^0.17.0"
boto3 = "^1.28.65"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
torch = "^2.1.1"
tritonclient = {extras = ["all"], version = "^2.39.0"}
pymilvus = "^2.3.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"