[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
numpy = "^1.26.3"
pymilvus = "^2.3.5"
scikit-learn = "^1.3.2"
tritonclient = {extras = ["all"], version = "^2.41.0"}



[tool.poetry.group.local]
optional = true

[tool.poetry.group.local.dependencies]
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
torch = "^2.1.2"



[tool.poetry.group.docker]
optional = true

[tool.poetry.group.docker.dependencies]
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
mangum = "^0.17.0"



[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"